--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,51 @@
     --foreground: #ededed;
   }
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  
+}
+
+body {
+  background-image: linear-gradient(
+    135deg,
+    #2b7fff80,
+    #2b80ff60,
+    #2b7fff40,
+    #ad46ff20,
+    #f6339a20,
+    #f6339a40,
+    #f6339a60,
+    #f6339a80
+  );
+
+  color: var(--foreground);
+}
+.fade-in {
+  animation: fadeIn 0.5s ease-in-out;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.animate-in {
+  animation: fadeIn 0.5s ease-in-out;
+}
+@keyframes animateIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
